--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<version>1.8.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+	<name>increff-commons-sheet</name>
 	<description>
 		Commons sheet library is used for creating a structured way to perform file read and write operations and is
 		used in Imdb library.
