--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<paquet.version>1.13.1</paquet.version>
+		<parquet.version>1.13.1</parquet.version>
 		<hadoop.version>3.3.5</hadoop.version>
 	</properties>
 
@@ -56,19 +56,19 @@
 		<dependency>
 			<groupId>org.apache.parquet</groupId>
 			<artifactId>parquet-hadoop</artifactId>
-			<version>${paquet.version}</version>
+			<version>${parquet.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.parquet</groupId>
 			<artifactId>parquet-common</artifactId>
-			<version>${paquet.version}</version>
+			<version>${parquet.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.parquet</groupId>
 			<artifactId>parquet-avro</artifactId>
-			<version>${paquet.version}</version>
+			<version>${parquet.version}</version>
 		</dependency>
 
 		<dependency>
