--- a/pom.xml
+++ b/pom.xml
@@ -181,8 +181,8 @@
 	</build>
 
 	<scm>
-		<connection>scm:git:git://github.com/increff/commons-sheet2.git</connection>
-		<developerConnection>scm:git:git@github.com:increff/commons-sheet2.git</developerConnection>
+		<connection>scm:git:https://github.com/increff/commons-sheet2.git</connection>
+		<developerConnection>scm:git:https://github.com/increff/commons-sheet2.git</developerConnection>
 		<url>https://github.com/increff/commons-sheet2</url>
 		<tag>rel-increff-commons-sheet-1.6</tag>
 	</scm>
